hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_type_parameter_several_use.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "T",
            IdentId(3) => "f",
            IdentId(4) => "g",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "number",
            IdentId(18) => "sub",
            IdentId(19) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:18; [17, 18],
                    symbol_id: SymbolId(20),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:24; [23, 24],
                    symbol_id: SymbolId(20),
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(2),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 1:8; [7, 8],
                        symbol_id: SymbolId(3),
                    },
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(3),
                                    span: 1:15; [14, 15],
                                    symbol_id: SymbolId(21),
                                },
                                type_def_id: TypeDefId(0),
                                span: 1:15; [14, 18],
                                type_id: TypeId(11),
                            },
                            Field {
                                identifier: Identifier {
                                    id: IdentId(4),
                                    span: 1:21; [20, 21],
                                    symbol_id: SymbolId(22),
                                },
                                type_def_id: TypeDefId(1),
                                span: 1:21; [20, 24],
                                type_id: TypeId(11),
                            },
                        ],
                    ),
                    None,
                ),
                span: 1:1; [0, 26],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Namespace(
                    Identifier {
                        id: IdentId(5),
                        span: 2:11; [37, 41],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 2:17; [43, 44],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:18; [17, 18],
            },
            TypeDefId(1) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(1),
                    ],
                ),
                span: 1:24; [23, 24],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(5): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(5),
                    {
                        IdentId(6): [
                            SymbolId(19),
                        ],
                        IdentId(7): [
                            SymbolId(6),
                        ],
                        IdentId(8): [
                            SymbolId(18),
                        ],
                        IdentId(9): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(10): [
                            SymbolId(15),
                        ],
                        IdentId(11): [
                            SymbolId(14),
                        ],
                        IdentId(12): [
                            SymbolId(13),
                        ],
                        IdentId(13): [
                            SymbolId(12),
                        ],
                        IdentId(14): [
                            SymbolId(11),
                        ],
                        IdentId(15): [
                            SymbolId(10),
                        ],
                        IdentId(16): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(17): [
                            SymbolId(5),
                        ],
                        IdentId(18): [
                            SymbolId(7),
                        ],
                        IdentId(19): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(19),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(17),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: TypeParameter(
                    IdentId(1),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(5),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Field(
                    IdentId(3),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(11),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Field(
                    IdentId(4),
                    StmtId(1),
                    1,
                ),
                type_id: TypeId(11),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
                [],
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(11) => Parameter(
                StmtId(1),
                0,
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {},
            unreachable: [],
        },
    },
)
