hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_unknown.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'S' not found",
                span: 1:9; [8, 9],
                level: Error,
            },
        ],
        inputs: (),
    },
)
